--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,51 +39,4 @@ find_package(OpenMP)
         set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
     endif()
 
-# Build-in GoogleTest to the project
-configure_file(CMakeLists.txt.in googletest/CMakeLists.txt)
-
-execute_process(
-    COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}" .
-    RESULT_VARIABLE result
-    WORKING_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/googletest"
-)
-
-if(result)
-    message(FATAL_ERROR "CMake step for googletest failed: ${result}")
-endif()
-
-execute_process(
-    COMMAND ${CMAKE_COMMAND} --build .
-    RESULT_VARIABLE result
-    WORKING_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/googletest"
-)
-
-if(result)
-    message(FATAL_ERROR "Build step for googletest failed: ${result}")
-endif()
-
-# Prevent overriding the parent project's compiler/linker
-# settings on Windows
-if(MSVC)
-    set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-endif()
-
-# Add googletest directly to our build. This defines
-# the gtest and gtest_main targets.
-add_subdirectory(
-    ${CMAKE_CURRENT_BINARY_DIR}/googletest-src
-    ${CMAKE_CURRENT_BINARY_DIR}/googletest-build
-    EXCLUDE_FROM_ALL
-)
-
-add_executable(MatrixIterator MatrixIteratorUnitTest.cpp)
-target_link_libraries(MatrixIterator gtest gtest_main)
-target_compile_features(MatrixIterator PRIVATE cxx_std_17)
-
-add_executable(MatrixTest MatrixUnitTest.cpp)
-target_link_libraries(MatrixTest gtest gtest_main)
-target_compile_features(MatrixTest PRIVATE cxx_std_17)
-
-enable_testing()
-add_test(NAME MatrixTest COMMAND MatrixTest)
-add_test(NAME MatrixIterator COMMAND MatrixIterator)
+add_subdirectory(testing)
