Move googletest to a submodule of the Pyng project

--- a/testing/CMakeLists.txt
+++ b/testing/CMakeLists.txt
@@ -1,12 +1,15 @@
-macro(list_subdirectories result_list current_dir)
-    file(GLOB children RELATIVE ${current_dir} ${current_dir}/*)
-    set(dir_list "")
-    foreach(child ${children})
-        if(IS_DIRECTORY ${current_dir}/${child})
-            list(APPEND dir_list ${child})
+macro(list_subdirectories RESULT_LIST CURRENT_DIR)
+    file(GLOB CHILDREN RELATIVE ${CURRENT_DIR} ${CURRENT_DIR}/*)
+
+    set(DIR_LIST "")
+
+    foreach(CHILD ${CHILDREN})
+        if(IS_DIRECTORY ${CURRENT_DIR}/${CHILD})
+            list(APPEND DIR_LIST ${CHILD})
         endif()
     endforeach()
-    set(${result_list} ${dir_list})
+
+    set(${RESULT_LIST} ${DIR_LIST})
 endmacro()
 
 function(create_test TEST_DIR)
@@ -15,6 +18,7 @@ function(create_test TEST_DIR)
     add_executable(${TEST_NAME} ${TEST_SRC})
     target_link_libraries(${TEST_NAME} gtest gtest_main)
     target_compile_features(${TEST_NAME} PRIVATE cxx_std_17)
+    target_include_directories(${TEST_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/source)
     add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME})
 endfunction(create_test)
 
@@ -22,9 +26,9 @@ endfunction(create_test)
 configure_file(CMakeLists.txt.in googletest/CMakeLists.txt)
 
 execute_process(
-    COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}" .
+    COMMAND ${CMAKE_COMMAND} -G ${CMAKE_GENERATOR} .
     RESULT_VARIABLE result
-    WORKING_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/googletest"
+    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/googletest
 )
 
 if(result)
@@ -34,7 +38,7 @@ endif()
 execute_process(
     COMMAND ${CMAKE_COMMAND} --build .
     RESULT_VARIABLE result
-    WORKING_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/googletest"
+    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/googletest
 )
 
 if(result)
@@ -50,14 +54,12 @@ endif()
 # Add googletest directly to our build. This defines
 # the gtest and gtest_main targets.
 add_subdirectory(
-    ${CMAKE_CURRENT_BINARY_DIR}/googletest-src
+    ${CMAKE_SOURCE_DIR}/googletest
     ${CMAKE_CURRENT_BINARY_DIR}/googletest-build
     EXCLUDE_FROM_ALL
 )
 
-include_directories("${CMAKE_SOURCE_DIR}/source")
-
-list_subdirectories(TESTING_DIRECTORIES "${CMAKE_SOURCE_DIR}/testing")
+list_subdirectories(TESTING_DIRECTORIES ${CMAKE_SOURCE_DIR}/testing)
 
 foreach(TEST_DIR ${TESTING_DIRECTORIES})
     create_test(${TEST_DIR})
