--- a/testing/CMakeLists.txt.in
+++ b/testing/CMakeLists.txt.in
@@ -1,14 +1,10 @@
 cmake_minimum_required(VERSION 3.1.3)
 
-project(googletest-download NONE)
-
 include(ExternalProject)
 
 ExternalProject_Add(googletest
-  GIT_REPOSITORY    https://github.com/google/googletest.git
-  GIT_TAG           master
-  SOURCE_DIR        "${CMAKE_CURRENT_BINARY_DIR}/googletest-src"
-  BINARY_DIR        "${CMAKE_CURRENT_BINARY_DIR}/googletest-build"
+  SOURCE_DIR        ${CMAKE_SOURCE_DIR}/googletest
+  BINARY_DIR        ${CMAKE_CURRENT_BINARY_DIR}/googletest-build
   CONFIGURE_COMMAND ""
   BUILD_COMMAND     ""
   INSTALL_COMMAND   ""
