Embed GLM library into the project
Also optimized configuration time by using ExternalProject_Add for
configuring external libraries

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,11 +10,13 @@ else()
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-rtti")
 endif()
 
-# Check if DirectX backend selected to be used for graphics acceleration
 if(WIN32)
-    option(USE_DX_MATH "Use DirectX backend for hardware acceleration (Recommended)" OFF)
+    # Check to select OpenGL backend for graphics acceleration
+    option(USE_GL_MATH "Use OpenGL backend for hardware acceleration" OFF)
+    # Check to select DirectX backend for graphics acceleration
+    option(USE_DX_MATH "Use DirectX backend for hardware acceleration (Recommended)" ON)
 
-    if (USE_DX_MATH)
+    if(USE_DX_MATH)
         add_definitions(-D__DX_MATH_LIBRARY)
     endif()
     # Available only for DirectX implementations
@@ -23,34 +25,22 @@ if(WIN32)
     if(USE_CPP_AMP)
         add_definitions(-D__CPP_AMP_ACCELERATION)
     endif()
-
+else()
+    option(USE_GL_MATH "Use OpenGL backend for hardware acceleration (Recommended)" ON)
 endif()
-
-# Check if OpenGL backend selected to be used for graphics acceleration
-option(USE_GL_MATH "Use OpenGL backend for hardware acceleration (Recommended)" ON)
 
 if(USE_GL_MATH)
-    find_package(GLM)
-        if(GLM_FOUND)
-            add_definitions(-D__GL_MATH_LIBRARY)
-            include_directories(${GLM_INCLUDE_DIRS})
-	 endif()
+    add_definitions(-D__GL_MATH_LIBRARY)
 endif()
 
-# Try to find and use OpenMP to for parallel calculations
-find_package(OpenMP)
-    if(OPENMP_FOUND)
-        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
-        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
-    endif()
-
-# Check if building unit tests required
+# Check to enable unit tests
 option(BUILD_TESTS "Include unit tests to build scenario" ON)
+
+include(cmake/FrameworkConfig.cmake)
 
 add_subdirectory(source)
 
-if (BUILD_TESTS)
+if(BUILD_TESTS)
     enable_testing()
     add_subdirectory(testing)
 endif()
