--- a/testing/CMakeLists.txt.in
+++ b/testing/CMakeLists.txt.in
@@ -2,11 +2,12 @@ cmake_minimum_required(VERSION 3.1.3)
 
 include(ExternalProject)
 
-ExternalProject_Add(googletest
+ExternalProject_Add(googletest-build
   SOURCE_DIR        ${CMAKE_SOURCE_DIR}/googletest
-  BINARY_DIR        ${CMAKE_CURRENT_BINARY_DIR}/googletest-build
-  CONFIGURE_COMMAND ""
-  BUILD_COMMAND     ""
+  BINARY_DIR        ${CMAKE_BINARY_DIR}/googletest
+  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/googletest
+  CONFIGURE_COMMAND ${CMAKE_COMMAND} -G ${CMAKE_GENERATOR} .
+  BUILD_COMMAND     ${CMAKE_COMMAND} --build .
   INSTALL_COMMAND   ""
   TEST_COMMAND      ""
 )
