--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -11,5 +11,5 @@ if(USE_GL_MATH)
     # Embed glm into the project
     configure_file(include-glm.cmake.in glm/CMakeLists.txt)
     # Defines 'glm' target
-    add_subdirectory(${CMAKE_SOURCE_DIR}/glm ${CMAKE_BINARY_DIR}/glm EXCLUDE_FROM_ALL)
+    add_subdirectory(${CMAKE_SOURCE_DIR}/third-party/glm ${CMAKE_BINARY_DIR}/glm EXCLUDE_FROM_ALL)
 endif()
