--- a/source/include-glm.cmake.in
+++ b/source/include-glm.cmake.in
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.1.3)
 include(ExternalProject)
 
 ExternalProject_Add(include-glm
-    SOURCE_DIR        ${CMAKE_SOURCE_DIR}/glm
+    SOURCE_DIR        ${CMAKE_SOURCE_DIR}/third-party/glm
     BINARY_DIR        ${CMAKE_BINARY_DIR}/glm
     WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/glm
     CONFIGURE_COMMAND ${CMAKE_COMMAND} -G ${CMAKE_GENERATOR} .
