--- a/testing/include-googletest.cmake.in
+++ b/testing/include-googletest.cmake.in
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.1.3)
 include(ExternalProject)
 
 ExternalProject_Add(include-googletest
-    SOURCE_DIR        ${CMAKE_SOURCE_DIR}/googletest
+    SOURCE_DIR        ${CMAKE_SOURCE_DIR}/third-party/googletest
     BINARY_DIR        ${CMAKE_BINARY_DIR}/googletest
     WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/googletest
     CONFIGURE_COMMAND ${CMAKE_COMMAND} -G ${CMAKE_GENERATOR} .
