--- a/.travis.yml
+++ b/.travis.yml
@@ -2,15 +2,12 @@ language: cpp
 
 compiler: clang
 
-dist: trusty
-
 os:
-- linux
-- osx
+- windows
 
 before_script:
   - mkdir build
   - cd build
   - cmake ..
 
-script: make && make test
+script: cmake --build . && ctest .
