--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,10 +3,14 @@ cmake_minimum_required(VERSION 3.1.3)
 # Set project name and version
 project(Pyng VERSION 0.0.1 LANGUAGES CXX)
 
-# Disable RTTI and exceptions
+# Additional optimization flags
 if(MSVC)
+    # Disable RTTI
     string(REPLACE "/GR" "/GR-" CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS})
+    # Enable MSVC intrinsic functions
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Oi")
 else()
+    # Disable RTTI
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-rtti")
 endif()
 
