--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,12 @@ endif()
 
 if(USE_GL_MATH)
     add_definitions(-D__GL_MATH_LIBRARY)
+
+    option(GLM_FORCE_PURE "Discard the use of SIMD optimizations based on compiler intrinsics" ON)
+
+    if (GLM_FORCE_PURE)
+        add_definitions(-DGLM_FORCE_PURE)
+    endif()
 endif()
 
 # Check to enable unit tests
@@ -42,5 +48,6 @@ add_subdirectory(source)
 
 if(BUILD_TESTS)
     enable_testing()
+    add_definitions(-DPYNG_ENABLE_TESTING)
     add_subdirectory(testing)
 endif()
